# accountings_fastapi_ci_cd

./: .dockerignore  .env.temp  .flake8  .gitignore  Jenkinsfile  README.md  ansible.cfg  entrypoint.sh  linter.sh  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: api_serverless.yml  api_terraform.yml  destroy_cloudformation.yml
src/accounts_type/domains/entities/: accounts_type.py
src/accounts_type/domains/exceptions/: accounts_type_exceptions.py
src/accounts_type/domains/schemas/: base_accounts_type.py
src/accounts_type/domains/usecases/: create.py  delete.py  find_all.py  find_one.py  update.py
src/accounts_type/infrastructures/containers/: repository_container.py  usecases_containers.py
src/accounts_type/presentation/controllers/: __init__.py  create_router.py  delete_router.py  find_all_router.py  find_one_router.py  update_router.py
src/accounts_type/presentation/schemas/: errors_messages.py
src/accounts_type/presentation/view_models/: accounts_type.py
src/shared/domain/entities/: base_entity.py  dynamodb_item.py  entity.py
src/shared/domain/repositories/: base_repository.py
src/shared/domain/usecases/: base_usecase.py
src/shared/errors/: base_exception.py
src/shared/infrastructure/adapters/: dynamodb_table_adapter.py
src/shared/infrastructure/ansible_resources/: hosts.yml
src/shared/infrastructure/containers/: app_container.py  dynamodb_container.py  (+4 more)
src/shared/utils/: dynamodb_data_transformer.py  dynamodb_utils.py
tests/e2e/: test_e2e.py
tests/integration/: test_inte.py
tests/unit/: test_unit.py
(+44 files in other folders)
