[tool.poetry]
name = "accounts-type"
version = "0.1.0"
description = "Provide FastAPI application with DynamoDB"
authors = ["franckeni <franckafosoule@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
httpx = "^0.27.2"
mangum = "^0.18.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
boto3 = "^1.35.24"
boto3-stubs = "^1.35.24"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
pyjwt = "^2.9.0"
python-multipart = "^0.0.10"
python-jose = "^3.3.0"
mypy-boto3-dynamodb = "^1.35.24"
dependency-injector = "^4.42.0"
pysonar-scanner = "^0.1.0.340"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
bandit = "^1.7.9"
moto = "^5.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.isort]
profile = "black"
skip_glob = "^(accounts-type-venv)"


[tool.sonar]
# must be unique in a given SonarQube instance
projectKey="accountings:project"
host.url="http://localhost:9000"
python.coverage.reportPaths="coverage.xml"
# --- optional properties ---
# defaults to project key
#projectName=My project
# defaults to 'not provided'
#projectVersion=1.0
 
# Path is relative to the pyproject.toml file. Defaults to .
#sources=.
 
# Encoding of the source code. Default is default system encoding
#sourceEncoding=UTF-8